resume file updated

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#about">ABOUT ME</a>
             <a href="#projects">PROJECTS</a>
             <a href="#contact">CONTACT</a>
-            <a href="Kompal Resume.pdf" download="Kompal Resume.pdf">Download CV</a>
+            <a href="Kompal Resume (5).pdf" download="Kompal Resume (5).pdf">Download CV</a>
         </nav>
     </header>
     <!-- home section design  -->
@@ -40,7 +40,7 @@
             <a href="https://www.linkedin.com/in/kompal-poorkar-2710231bb/" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
         </div> 
         <div class="cv">
-            <a href="HARSH PATWARE (1).pdf" download="HARSH PATWARE (1).pdf" class="btn">Download CV</a>
+            <a href="Kompal Resume (5).pdf" download="Kompal Resume (5).pdf" class="btn">Download CV</a>
         </div>
     </section>
     <!-- about section -->
